<resources>
    <!-- Login screen -->
    <string name="app_name">EasyRoom</string>
    <string name="welcome">Welcome to Easy Room!</string>
    <string name="description_logo">Logo</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signIn">Sign In</string>
    <string name="createAccount">Create Account</string>

    <!-- Register screen -->
    <string name="register">Create Account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="tv_radio_group">Please, select your profile:</string>
    <string name="rb_owner">Owner</string>
    <string name="rb_tenant">Tenant</string>
    <string name="terms">Accept terms and services</string>
    <string name="button_register">Register</string>

    <!-- Home owner screen -->
    <string name="home">Home</string>
    <string name="description_ic_menu">Menu</string>
    <string name="description_ic_profile">Profile</string>
    <string name="properties">Properties</string>
    <string name="notifications">Notifications</string>

    <!-- Home tenant screen -->
    <string name="payment">Payment</string>
    <string name="task">Task</string>
    <string name="other_tenants">Other Tenants</string>
    <string name="owner">Owner</string>

    <!-- Profile screen -->
    <string name="profile">Your profile information:</string>
    <string name="user_type">User Type</string>

    <!-- Properties screen -->
    <string name="description_ic_home">Home</string>
    <string name="add_property">Add Property</string>
    <string name="delete_property">Delete Property</string>
    <string name="update_property">Update Property</string>
    <string name="property_information">Property Information</string>
    <string name="log_out">Log Out</string>

    <!-- Add properties screen -->
    <string name="new_property">New Property</string>
    <string name="property_name">Property Name</string>
    <string name="property_address">Property Address</string>
    <string name="property_description">Property Description</string>
    <string name="update_property_name">Change Property Name</string>
    <string name="update_property_address">Change Property Address</string>
    <string name="update_property_description">Change Property Description</string>
    <string name="to_create">To Create</string>

    <!-- Update properties screen -->
    <string name="save_changes">Save Changes</string>

    <!-- Property screen -->
    <string name="property"></string>
    <string name="payments">Payments</string>
    <string name="rooms">Rooms</string>
    <string name="tenants">Tenants</string>

    <!-- List items RecyclerView -->
    <string name="information">Information</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>

    <!-- Rooms screen -->
    <string name="add_room">Add Room</string>
    <string name="room_information">Room Information</string>
    <string name="update_room">Update Room</string>
    <string name="delete_room">Delete Room</string>
    <string name="update_room_name">Change Room Name</string>
    <string name="update_room_description">Change Room Description</string>


    <!-- Add rooms screen -->
    <string name="new_room">New Room</string>
    <string name="room_name">Room Name</string>
    <string name="room_description">Room Description</string>

    <!-- Room screen -->
    <string name="chat">Chat</string>
    <string name="room"></string>

    <!-- Room tenants screen -->
    <string name="room_tenants">Room Tenants</string>
    <string name="add_tenant">Add Tenant</string>

    <!-- Room tenant screen -->
    <string name="exclude_from_room">Exclude From Room</string>

    <!-- Add tenant screen -->
    <string name="tenants_without_room">Tenants Without Room</string>
    <string name="add_tenant_in_room">Add Tenant In Room</string>
    <string name="add_tenant_name_concatenation">%1$s %2$s</string>

    <!-- Property tenants screen -->
    <string name="property_tenants">Property Tenants</string>
    <string name="exclude_from_property">Exclude From Property</string>

    <!-- Tenant information screen -->
    <string name="tenant_information">Tenant Information</string>
    <string name="tenant_name">Name</string>
    <string name="tenant_phone">Phone</string>
    <string name="tenant_email">Email</string>
    <string name="tenant_name_concatenation">%1$s %2$s</string>

    <!-- Owner of the property screen -->
    <string name="owner_property">Owner of the Property</string>
    <string name="owner_profile">Owner Profile</string>

    <!-- Owner profile screen -->
    <string name="owner_information">Owner Information</string>
    <string name="owner_name">Name</string>
    <string name="owner_phone">Phone</string>
    <string name="owner_email">Email</string>
    <string name="owner_name_concatenation">%1$s %2$s</string>

    <!-- Other tenants screen -->
    <string name="other_tenant_information">Other Tenant Information</string>
    <string name="other_tenant_chat">Other Tenant Chat</string>
    <string name="group_chat">Group Chat</string>
    <string name="other_tenant_concatenation">%1$s %2$s</string>
    <string name="other_tenant"></string>

    <!-- Room chat screen -->
    <string name="type_a_message">Type a message</string>
    <string name="autofill_message">Message</string>
    <string name="send">Send</string>
    <string name="message_concatenation">%1$s: %2$s</string>
    <string name="room_chat">Room Chat</string>

    <!-- Group chat screen -->
    <string name="group"></string>

</resources>