<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000010"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/tvRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textColor="#05C8F4"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07999998" />

    <EditText
        android:id="@+id/etFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:width="300dp"
        android:autofillHints="nameGiven"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:hint="@string/first_name"
        android:importantForAutofill="yes"
        android:inputType="textPersonName"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRegister" />

    <EditText
        android:id="@+id/etLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:width="300dp"
        android:autofillHints="nameFamily"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:hint="@string/last_name"
        android:importantForAutofill="yes"
        android:inputType="textPersonName"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etFirstName" />

    <EditText
        android:id="@+id/etEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:width="300dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:hint="@string/email"
        android:importantForAutofill="yes"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etLastName" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:width="300dp"
        android:autofillHints="password"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:hint="@string/password"
        android:importantForAutofill="yes"
        android:inputType="textPassword"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmailAddress" />

    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:width="300dp"
        android:autofillHints="password"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:importantForAutofill="yes"
        android:inputType="textPassword"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassword" />

    <EditText
        android:id="@+id/etPhoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:width="300dp"
        android:autofillHints="phone"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:hint="@string/phone_number"
        android:importantForAutofill="yes"
        android:inputType="phone"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etConfirmPassword" />

    <TextView
        android:id="@+id/tvRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/tv_radio_group"
        android:textColor="#05C8F4"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPhoneNumber"/>

    <RadioGroup
        android:id="@+id/rgUserType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/tvRadioGroup">

        <RadioButton
            android:id="@+id/rbOwner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_owner"
            android:textColor="#05C8F4"
            android:textSize="17sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rbTenant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_tenant"
            android:textColor="#05C8F4"
            android:textSize="17sp"
            android:textStyle="bold" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/cbTerms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/terms"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgUserType" />

    <Button
        android:id="@+id/btRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#05C8F4"
        android:text="@string/button_register"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbTerms" />

</androidx.constraintlayout.widget.ConstraintLayout>