<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@color/black"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvRoomName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/ivRoomInformation"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:contentDescription="@string/room_information"
        android:src="@drawable/ic_information" />

    <ImageView
        android:id="@+id/ivEditRoom"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:contentDescription="@string/update_room"
        android:src="@drawable/ic_edit" />

    <ImageView
        android:id="@+id/ivDeleteRoom"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:contentDescription="@string/delete_room"
        android:src="@drawable/ic_delete" />

</LinearLayout>