<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue"
    tools:context=".screen.UpdatePropertyActivity">

    <TextView
        android:id="@+id/tvUpdateProperty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_property"
        android:textColor="@color/light_blue"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07999998" />

    <TextView
        android:id="@+id/tvLabelPropertyName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:text="@string/property_name"
        android:textColor="@color/light_blue"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/etPropertyName"
        app:layout_constraintStart_toStartOf="@+id/etPropertyName" />

    <EditText
        android:id="@+id/etPropertyName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:width="300dp"
        android:autofillHints="@string/property_name"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:hint="@string/update_property_name"
        android:importantForAutofill="yes"
        android:inputType="text"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUpdateProperty" />

    <TextView
        android:id="@+id/tvLabelPropertyAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:text="@string/property_address"
        android:textColor="@color/light_blue"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/etPropertyName"
        app:layout_constraintStart_toStartOf="@+id/etPropertyAddress" />

    <EditText
        android:id="@+id/etPropertyAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:width="300dp"
        android:autofillHints="@string/property_address"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:hint="@string/update_property_address"
        android:importantForAutofill="yes"
        android:inputType="text"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPropertyName" />

    <TextView
        android:id="@+id/tvLabelPropertyDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:labelFor="@+id/etPropertyDescription"
        android:text="@string/property_description"
        android:textColor="@color/light_blue"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/etPropertyAddress"
        app:layout_constraintStart_toStartOf="@+id/etPropertyDescription" />

    <EditText
        android:id="@+id/etPropertyDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:width="300dp"
        android:autofillHints="@string/property_description"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:hint="@string/update_property_description"
        android:importantForAutofill="yes"
        android:inputType="text"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPropertyAddress" />

    <Button
        android:id="@+id/btSaveChanges"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/light_blue"
        android:layout_marginTop="15dp"
        android:text="@string/save_changes"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPropertyDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>
