<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue"
    tools:context=".screen.UpdateRoomActivity">

    <TextView
        android:id="@+id/tvUpdateRoom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_room"
        android:textColor="@color/light_blue"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07999998" />

    <TextView
        android:id="@+id/tvLabelNameRoom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:text="@string/room_name"
        android:textColor="@color/light_blue"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/etNameRoom"
        app:layout_constraintStart_toStartOf="@+id/etNameRoom" />

    <EditText
        android:id="@+id/etNameRoom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:width="300dp"
        android:autofillHints="@string/room_name"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:hint="@string/update_room_name"
        android:importantForAutofill="yes"
        android:inputType="text"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUpdateRoom" />

    <TextView
        android:id="@+id/tvLabelDescriptionRoom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:text="@string/room_description"
        android:textColor="@color/light_blue"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/etNameRoom"
        app:layout_constraintStart_toStartOf="@+id/etDescriptionRoom" />

    <EditText
        android:id="@+id/etDescriptionRoom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:width="300dp"
        android:autofillHints="@string/room_description"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:hint="@string/update_room_description"
        android:importantForAutofill="yes"
        android:inputType="text"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNameRoom" />

    <Button
        android:id="@+id/btSaveChanges"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/light_blue"
        android:layout_marginTop="15dp"
        android:text="@string/save_changes"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etDescriptionRoom" />

</androidx.constraintlayout.widget.ConstraintLayout>