<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue"
    tools:context=".screen.HomeTenantActivity">

    <LinearLayout
        android:id="@+id/llHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivLogOut"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:clickable="true"
            android:focusable="true"
            android:contentDescription="@string/description_ic_menu"
            android:src="@drawable/ic_logout" />

        <TextView
            android:id="@+id/tvHome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/home"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            android:gravity="center" />

        <ImageView
            android:id="@+id/ivProfile"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:clickable="true"
            android:focusable="true"
            android:contentDescription="@string/description_ic_profile"
            android:src="@drawable/ic_profile" />
    </LinearLayout>

    <ImageView
        android:id="@+id/ivPayment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/payment"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/ic_payment"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@id/ivNotificationsTenant"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llHeader" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/light_blue"
        android:text="@string/payment"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/ivPayment"
        app:layout_constraintStart_toStartOf="@id/ivPayment"
        app:layout_constraintEnd_toEndOf="@id/ivPayment" />

    <ImageView
        android:id="@+id/ivNotificationsTenant"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/notifications"
        android:background="@drawable/ic_notifications"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toEndOf="@id/ivPayment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llHeader"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/light_blue"
        android:text="@string/notifications"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/ivNotificationsTenant"
        app:layout_constraintStart_toStartOf="@id/ivNotificationsTenant"
        app:layout_constraintEnd_toEndOf="@id/ivNotificationsTenant" />

    <ImageView
        android:id="@+id/ivRoomChatWithOwner"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/ic_chat"
        android:contentDescription="@string/room"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@id/ivOtherTenants"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivNotificationsTenant" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/light_blue"
        android:text="@string/room_chat"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/ivRoomChatWithOwner"
        app:layout_constraintStart_toStartOf="@id/ivRoomChatWithOwner"
        app:layout_constraintEnd_toEndOf="@id/ivRoomChatWithOwner" />

    <ImageView
        android:id="@+id/ivOtherTenants"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/ic_other_tenants"
        android:contentDescription="@string/other_tenants"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ivRoomChatWithOwner"
        app:layout_constraintTop_toBottomOf="@id/ivNotificationsTenant" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/light_blue"
        android:text="@string/other_tenants"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/ivOtherTenants"
        app:layout_constraintStart_toStartOf="@id/ivOtherTenants"
        app:layout_constraintEnd_toEndOf="@id/ivOtherTenants" />

    <ImageView
        android:id="@+id/ivOwnerProfile"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="70dp"
        android:background="@drawable/ic_person"
        android:contentDescription="@string/owner_profile"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@id/ivRoomChatWithOwner"
        app:layout_constraintStart_toStartOf="@id/ivRoomChatWithOwner"
        app:layout_constraintTop_toBottomOf="@id/ivOtherTenants" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/light_blue"
        android:text="@string/owner_profile"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/ivOwnerProfile"
        app:layout_constraintStart_toStartOf="@id/ivOwnerProfile"
        app:layout_constraintEnd_toEndOf="@id/ivOwnerProfile" />


</androidx.constraintlayout.widget.ConstraintLayout>